WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248414
Fix handling of calculated values in CSSStyleValue.parse()
https://bugs.webkit.org/show_bug.cgi?id=248414
Summary
Fix handling of calculated values in CSSStyleValue.parse()
Chris Dumez
Reported
2022-11-28 12:44:29 PST
Fix handling of calculated values in CSSStyleValue.parse().
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-11-28 12:46:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6874
EWS
Comment 2
2022-11-30 19:12:08 PST
Committed
257215@main
(ec3382a6412f): <
https://commits.webkit.org/257215@main
> Reviewed commits have been landed. Closing PR #6874 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-11-30 19:13:16 PST
<
rdar://problem/102841131
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug