Fix handling of calculated values in CSSStyleValue.parse() https://bugs.webkit.org/show_bug.cgi?id=248414

Reviewed by Geoffrey Garen.

Calling CSSStyleValue.parse() with a `calc()` would return a generic CSSStyleValue
instead of the correct CSSMathValue subclass (e.g. CSSMathSum). This was causing
the CSSMathSum tests to fail in idlharness.html.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/idlharness-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-normalization/transformvalue-normalization.tentative-expected.txt:
* Source/WebCore/css/calc/CSSCalcValue.h:
* Source/WebCore/css/typedom/CSSNumericValue.cpp:
(WebCore::reifyMathExpression):
(WebCore::reifyMathExpressions):
(WebCore::CSSNumericValue::reifyMathExpression):
* Source/WebCore/css/typedom/CSSNumericValue.h:
* Source/WebCore/css/typedom/CSSStyleValue.cpp:
(WebCore::CSSStyleValue::parse):
* Source/WebCore/css/typedom/CSSStyleValueFactory.cpp:
(WebCore::CSSStyleValueFactory::reifyValue):

Canonical link: https://commits.webkit.org/257215@main