Source/WebCore/css/typedom/CSSStyleValueFactory.cpp
@@ -30,6 +30,7 @@
 #include "config.h"
 #include "CSSStyleValueFactory.h"
 
+#include "CSSCalcValue.h"
 #include "CSSCustomPropertyValue.h"
 #include "CSSKeywordValue.h"
 #include "CSSNumericFactory.h"
@@ -188,6 +189,13 @@ ExceptionOr<Ref<CSSStyleValue>> CSSStyleValueFactory::reifyValue(Ref<CSSValue> c
 {
     if (is<CSSPrimitiveValue>(cssValue)) {
         auto primitiveValue = downcast<CSSPrimitiveValue>(cssValue.ptr());
+        if (primitiveValue->isCalculated()) {
+            auto* calcValue = primitiveValue->cssCalcValue();
+            auto result = CSSNumericValue::reifyMathExpression(calcValue->expressionNode());
+            if (result.hasException())
+                return result.releaseException();
+            return static_reference_cast<CSSStyleValue>(result.releaseReturnValue());
+        }
         switch (primitiveValue->primitiveType()) {
         case CSSUnitType::CSS_NUMBER:
             return Ref<CSSStyleValue> { CSSNumericFactory::number(primitiveValue->doubleValue()) };
